force-app/main/default/objects/customer_POE__c/customer_POE__c.object-meta.xml
<CustomObject>
    <label>Passengers</label>
    <nameField>
        <displayFormat>PIF-{00000000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passengers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>