force-app/main/default/objects/customer_POE__c/fields/agency_id__c.field-meta.xml
<CustomField>
    <fullName>agency_id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agency Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers_POE</relationshipName>
    <type>Lookup</type>
</CustomField>