force-app/main/default/objects/customer_POE__c/fields/auto_draft__c.field-meta.xml
<CustomField>
    <fullName>auto_draft__c</fullName>
    <label>auto draft</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>