force-app/main/default/objects/customer_POE__c/fields/clean_first_name__c.field-meta.xml
<CustomField>
    <fullName>clean_first_name__c</fullName>
    <formula>SUBSTITUTE(
SUBSTITUTE( first_name__c , &quot;-&quot;, &quot;&quot;), &quot;&apos;&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clean First Name</label>
    <type>Text</type>
</CustomField>