force-app/main/default/objects/customer_POE__c/fields/country_issue__c.field-meta.xml
<CustomField>
    <fullName>country_issue__c</fullName>
    <label>Country Of Issue</label>
    <length>30</length>
    <type>Text</type>
</CustomField>