force-app/main/default/objects/customer_POE__c/fields/Current_Age__c.field-meta.xml
<CustomField>
    <fullName>Current_Age__c</fullName>
    <formula>(Departure_Date__c - (DATE(VALUE(RIGHT(dob__c, 4)),VALUE(MID(dob__c, 4,2)),VALUE(LEFT(dob__c,2)))) ) / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>