force-app/main/default/objects/customer_POE__c/fields/Customisation_Team_Email__c.field-meta.xml
<CustomField>
    <fullName>Customisation_Team_Email__c</fullName>
    <description>Email address for Customisation team member - for any notifications/changes to this PIF</description>
    <inlineHelpText>Customisation team - please enter your email address for any notification emails relate to this PIF</inlineHelpText>
    <label>Customisation Team Email</label>
    <type>Email</type>
</CustomField>