force-app/main/default/objects/customer_POE__c/fields/Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID__c</fullName>
    <formula>ordexp_tad_order__r.ordexp_deal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal ID</label>
    <type>Text</type>
</CustomField>