force-app/main/default/objects/customer_POE__c/fields/Deal_ID_Title__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID_Title__c</fullName>
    <formula>ordexp_tad_order__r.ordexp_deal__r.Deal_ID_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal ID + Title</label>
    <type>Text</type>
</CustomField>