force-app/main/default/objects/customer_POE__c/fields/Departure_City__c.field-meta.xml
<CustomField>
    <fullName>Departure_City__c</fullName>
    <formula>TEXT(Order_Line_Item__r.Departure_cities__r.city__c)</formula>
    <label>Departure City</label>
    <type>Text</type>
</CustomField>