force-app/main/default/objects/customer_POE__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <formula>ordexp_tad_order__r.ordexp_departure_date__r.date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>