force-app/main/default/objects/customer_POE__c/fields/dietary_request__c.field-meta.xml
<CustomField>
    <fullName>dietary_request__c</fullName>
    <label>Dietary Requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>