force-app/main/default/objects/customer_POE__c/fields/Email_Comms__c.field-meta.xml
<CustomField>
    <fullName>Email_Comms__c</fullName>
    <label>Email Comms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Send1768-090819</fullName>
            </value>
            <value>
                <fullName>Send1793-020819</fullName>
            </value>
            <value>
                <fullName>Send1793-070819</fullName>
            </value>
            <value>
                <fullName>Send1960-060819</fullName>
            </value>
            <value>
                <fullName>Send1652-310719</fullName>
            </value>
            <value>
                <fullName>Sent1768-090819</fullName>
            </value>
            <value>
                <fullName>Sent1793-020819</fullName>
            </value>
            <value>
                <fullName>Sent1793-070819</fullName>
            </value>
            <value>
                <fullName>Sent1960-060819</fullName>
            </value>
            <value>
                <fullName>Sent1652-310719</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>