force-app/main/default/objects/customer_POE__c/fields/Emergency_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_First_Name__c</fullName>
    <label>Emergency First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>