force-app/main/default/objects/customer_POE__c/fields/Emergency_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Phone__c</fullName>
    <label>Emergency Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>