force-app/main/default/objects/customer_POE__c/fields/Emergency_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Relationship__c</fullName>
    <label>Emergency Relationship</label>
    <length>100</length>
    <type>Text</type>
</CustomField>