force-app/main/default/objects/customer_POE__c/fields/first_name__c.field-meta.xml
<CustomField>
    <fullName>first_name__c</fullName>
    <label>First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>