force-app/main/default/objects/customer_POE__c/fields/Flight_Age_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Flight_Age_Grouping__c</fullName>
    <formula>IF(ISBLANK( dob__c ), &quot;N/A&quot;, 
IF(( Departure_Date__c - (DATE(VALUE(RIGHT(dob__c, 4)),VALUE(MID(dob__c, 4,2)),VALUE(LEFT(dob__c,2)))) ) / 365 &lt; 2, &quot;Infant&quot;, 
IF(( Departure_Date__c - (DATE(VALUE(RIGHT(dob__c, 4)),VALUE(MID(dob__c, 4,2)),VALUE(LEFT(dob__c,2)))) ) / 365 &lt; 12, &quot;Child&quot;, 
IF(( Departure_Date__c - (DATE(VALUE(RIGHT(dob__c, 4)),VALUE(MID(dob__c, 4,2)),VALUE(LEFT(dob__c,2)))) ) / 365 &gt;= 12, &quot;Adult&quot;,  
&quot;N/A&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Age Grouping</label>
    <type>Text</type>
</CustomField>