force-app/main/default/objects/customer_POE__c/fields/Flight_Ticketer_Email__c.field-meta.xml
<CustomField>
    <fullName>Flight_Ticketer_Email__c</fullName>
    <description>Email address for Flight Ticketer as set on Deal</description>
    <inlineHelpText>Populated by Workflow - Field Update</inlineHelpText>
    <label>Flight Ticketer Email</label>
    <type>Email</type>
</CustomField>