force-app/main/default/objects/customer_POE__c/fields/Height_CM__c.field-meta.xml
<CustomField>
    <fullName>Height_CM__c</fullName>
    <label>Height(CM)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>