force-app/main/default/objects/customer_POE__c/fields/Instant_Notification__c.field-meta.xml
<CustomField>
    <fullName>Instant_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instant Notification</label>
    <type>Checkbox</type>
</CustomField>