force-app/main/default/objects/customer_POE__c/fields/insurance_provider_number__c.field-meta.xml
<CustomField>
    <fullName>insurance_provider_number__c</fullName>
    <label>Insurance Provider Number</label>
    <type>TextArea</type>
</CustomField>