force-app/main/default/objects/customer_POE__c/fields/link_booking__c.field-meta.xml
<CustomField>
    <fullName>link_booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LINK BOOKING</label>
    <type>Checkbox</type>
</CustomField>