force-app/main/default/objects/customer_POE__c/fields/link_to_email__c.field-meta.xml
<CustomField>
    <fullName>link_to_email__c</fullName>
    <label>LINK TO EMAIL</label>
    <type>Email</type>
</CustomField>