force-app/main/default/objects/customer_POE__c/fields/link_to_order__c.field-meta.xml
<CustomField>
    <fullName>link_to_order__c</fullName>
    <label>LINK TO ORDER</label>
    <length>18</length>
    <type>Text</type>
</CustomField>