force-app/main/default/objects/customer_POE__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <formula>ordexp_tad_order__r.ordexp_account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant</label>
    <type>Text</type>
</CustomField>