force-app/main/default/objects/customer_POE__c/fields/mobility_n_medical_request__c.field-meta.xml
<CustomField>
    <fullName>mobility_n_medical_request__c</fullName>
    <label>Mobility &amp; Medical Requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>