force-app/main/default/objects/customer_POE__c/fields/mobility_request__c.field-meta.xml
<CustomField>
    <fullName>mobility_request__c</fullName>
    <label>MOBILITY REQUEST</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>