force-app/main/default/objects/customer_POE__c/fields/name_change__c.field-meta.xml
<CustomField>
    <fullName>name_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Name Change</label>
    <type>Checkbox</type>
</CustomField>