force-app/main/default/objects/customer_POE__c/fields/Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>order_line_item__c.ordexp_TAD_Order__c</field>
            <operation>equals</operation>
            <valueField>$Source.ordexp_tad_order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>order_line_item__c</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers_POE</relationshipName>
    <type>Lookup</type>
</CustomField>