force-app/main/default/objects/customer_POE__c/fields/Order_Line_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item_Name__c</fullName>
    <formula>Order_Line_Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Line Item Name</label>
    <type>Text</type>
</CustomField>