force-app/main/default/objects/customer_POE__c/fields/Order_Line_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item_Status__c</fullName>
    <formula>TEXT(Order_Line_Item__r.OLI_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Line Item Status</label>
    <type>Text</type>
</CustomField>