force-app/main/default/objects/customer_POE__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <formula>TEXT( ordexp_tad_order__r.ordexp_master_status__c ) + &apos; / &apos;  + TEXT( ordexp_tad_order__r.ordexp_sub_status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Status</label>
    <type>Text</type>
</CustomField>