force-app/main/default/objects/customer_POE__c/fields/ordexp_PAX_Nickname__c.field-meta.xml
<CustomField>
    <fullName>ordexp_PAX_Nickname__c</fullName>
    <label>PAX Nickname</label>
    <length>55</length>
    <type>Text</type>
</CustomField>