force-app/main/default/objects/customer_POE__c/fields/Passanger_Email__c.field-meta.xml
<CustomField>
    <fullName>Passanger_Email__c</fullName>
    <formula>IF(ISBLANK(Email__c),  ordexp_tad_order__r.ordexp_email_purchaser__c ,  Email__c )</formula>
    <label>Passenger Email</label>
    <type>Text</type>
</CustomField>