force-app/main/default/objects/customer_POE__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <formula>first_name__c&amp;&quot; &quot;&amp;last_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passenger_Name</label>
    <type>Text</type>
</CustomField>