force-app/main/default/objects/customer_POE__c/fields/Passenger_Name_With_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name_With_Nickname__c</fullName>
    <formula>ordexp_PAX_Nickname__c +&apos; | &apos;+ first_name__c + &apos; &apos; +last_name__c</formula>
    <label>Passenger Name With Nickname</label>
    <type>Text</type>
</CustomField>