force-app/main/default/objects/customer_POE__c/fields/Passenger_to_Link__c.field-meta.xml
<CustomField>
    <fullName>Passenger_to_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passenger to Link</label>
    <referenceTo>customer_POE__c</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers</relationshipName>
    <type>Lookup</type>
</CustomField>