force-app/main/default/objects/customer_POE__c/fields/passport_expiry_date__c.field-meta.xml
<CustomField>
    <fullName>passport_expiry_date__c</fullName>
    <label>Passport Expiry Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>