force-app/main/default/objects/customer_POE__c/fields/pax_count__c.field-meta.xml
<CustomField>
    <fullName>pax_count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pax Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>