force-app/main/default/objects/customer_POE__c/fields/pif_final__c.field-meta.xml
<CustomField>
    <fullName>pif_final__c</fullName>
    <defaultValue>false</defaultValue>
    <label>pif final</label>
    <type>Checkbox</type>
</CustomField>