force-app/main/default/objects/customer_POE__c/fields/postcode__c.field-meta.xml
<CustomField>
    <fullName>postcode__c</fullName>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>