force-app/main/default/objects/customer_POE__c/fields/preferred_date_2__c.field-meta.xml
<CustomField>
    <fullName>preferred_date_2__c</fullName>
    <label>Preferred Date 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>