force-app/main/default/objects/customer_POE__c/fields/Purchaser_email__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_email__c</fullName>
    <formula>ordexp_tad_order__r.ordexp_account__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchaser email</label>
    <type>Text</type>
</CustomField>