force-app/main/default/objects/customer_POE__c/fields/Purchaser_Name__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Name__c</fullName>
    <label>Purchaser Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>