force-app/main/default/objects/customer_POE__c/fields/sabre_delete_profile__c.field-meta.xml
<CustomField>
    <fullName>sabre_delete_profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sabre Delete Profile</label>
    <type>Checkbox</type>
</CustomField>