force-app/main/default/objects/customer_POE__c/fields/sabre_gender__c.field-meta.xml
<CustomField>
    <fullName>sabre_gender__c</fullName>
    <formula>CASE( title__c , &quot;Mr&quot;, &quot;M&quot;, &quot;Mrs&quot;, &quot;F&quot;, &quot;Miss&quot;, &quot;F&quot;, &quot;F&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sabre Gender</label>
    <type>Text</type>
</CustomField>