force-app/main/default/objects/customer_POE__c/fields/Sabre_Name__c.field-meta.xml
<CustomField>
    <fullName>Sabre_Name__c</fullName>
    <formula>&quot;-&quot;&amp;last_name__c&amp;&quot;/&quot;&amp; IF( ISBLANK( second_name__c ) , first_name__c &amp;&quot; &quot;&amp; title__c , first_name__c &amp;&quot; &quot;&amp; second_name__c &amp;&quot; &quot;&amp;title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sabre Name</label>
    <type>Text</type>
</CustomField>