force-app/main/default/objects/customer_POE__c/fields/sabre_passport_expiry__c.field-meta.xml
<CustomField>
    <fullName>sabre_passport_expiry__c</fullName>
    <formula>RIGHT( passport_expiry_date__c , 4) + &quot;-&quot; + MID(passport_expiry_date__c, 4, 2) + &quot;-&quot; + LEFT(passport_expiry_date__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sabre Passport Expiry</label>
    <type>Text</type>
</CustomField>