force-app/main/default/objects/customer_POE__c/fields/Sabre_Pif_Id__c.field-meta.xml
<CustomField>
    <fullName>Sabre_Pif_Id__c</fullName>
    <formula>TRIM(right(Name , (LEN( Name) - 4)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sabre Pif Id</label>
    <type>Text</type>
</CustomField>