force-app/main/default/objects/customer_POE__c/fields/Sabre_Profile_Email__c.field-meta.xml
<CustomField>
    <fullName>Sabre_Profile_Email__c</fullName>
    <formula>IF(OR(ISNULL(Email__c),ISBLANK(Email__c)),ordexp_tad_order__r.ordexp_email_purchaser__c,Email__c)</formula>
    <label>Sabre Profile Email</label>
    <type>Text</type>
</CustomField>