force-app/main/default/objects/customer_POE__c/fields/Sabre_Profile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sabre_Profile_Phone__c</fullName>
    <formula>IF( OR(ISNULL(Phone_Number__c),  ISBLANK(Phone_Number__c) ), SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(ordexp_tad_order__r.Account_Phone_Number__c, &apos;+&apos;, &apos;&apos;), &apos; &apos;, &apos;&apos;), &apos;-&apos;, &apos;&apos;),&apos;_&apos;,&apos;&apos;),
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone_Number__c, &apos;+&apos;, &apos;&apos;), &apos; &apos;, &apos;&apos;), &apos;-&apos;, &apos;&apos;),&apos;_&apos;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sabre Profile Phone</label>
    <type>Text</type>
</CustomField>