force-app/main/default/objects/customer_POE__c/fields/Sabre_Profile_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Sabre_Profile_Post_Code__c</fullName>
    <formula>IF(OR(ISNULL(postcode__c),ISBLANK(postcode__c)), ordexp_tad_order__r.Postcode__c ,postcode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sabre Profile Post Code</label>
    <type>Text</type>
</CustomField>