force-app/main/default/objects/customer_POE__c/fields/sabre_profile_uid__c.field-meta.xml
<CustomField>
    <fullName>sabre_profile_uid__c</fullName>
    <label>Sabre Profile UID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>