force-app/main/default/objects/customer_POE__c/fields/second_name__c.field-meta.xml
<CustomField>
    <fullName>second_name__c</fullName>
    <inlineHelpText>Please leave blank if not applicable</inlineHelpText>
    <label>Second Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>