force-app/main/default/objects/customer_POE__c/fields/secondtravelparty__c.field-meta.xml
<CustomField>
    <fullName>secondtravelparty__c</fullName>
    <label>Link to Second Travel Party</label>
    <length>200</length>
    <type>Text</type>
</CustomField>