force-app/main/default/objects/customer_POE__c/fields/SFID__c.field-meta.xml
<CustomField>
    <fullName>SFID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFID</label>
    <type>Text</type>
</CustomField>