force-app/main/default/objects/customer_POE__c/fields/suburb__c.field-meta.xml
<CustomField>
    <fullName>suburb__c</fullName>
    <label>Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>