force-app/main/default/objects/customer_POE__c/fields/TAD_Booking_Records__c.field-meta.xml
<CustomField>
    <fullName>TAD_Booking_Records__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAD Booking Records</label>
    <referenceTo>TAD_Booking_Records__c</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers_POE</relationshipName>
    <type>Lookup</type>
</CustomField>