force-app/main/default/objects/customer_POE__c/fields/tad_cruise_terms__c.field-meta.xml
<CustomField>
    <fullName>tad_cruise_terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow TripADeal to accept cruise terms</label>
    <type>Checkbox</type>
</CustomField>