force-app/main/default/objects/customer_POE__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>Title</label>
    <length>5</length>
    <type>Text</type>
</CustomField>