force-app/main/default/objects/customer_POE__c/fields/Total_Price_Order__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Order__c</fullName>
    <formula>ordexp_tad_order__r.ordexp_gross_amount_final__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price(Order)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>