force-app/main/default/objects/customer_POE__c/fields/Transfer_This_PIF__c.field-meta.xml
<CustomField>
    <fullName>Transfer_This_PIF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer This PIF</label>
    <type>Checkbox</type>
</CustomField>