force-app/main/default/objects/customer_POE__c/fields/Weight_KG__c.field-meta.xml
<CustomField>
    <fullName>Weight_KG__c</fullName>
    <label>Weight(KG)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>