force-app/main/default/objects/customer_POE__c/recordTypes/UJ_No_Fields.recordType-meta.xml
<RecordType>
    <fullName>UJ_No_Fields</fullName>
    <active>true</active>
    <label>UJ - No Fields</label>
</RecordType>