force-app/main/default/objects/customer_POE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>first_name__c</columns>
    <columns>last_name__c</columns>
    <columns>reference_number__c</columns>
    <columns>nationality__c</columns>
    <columns>country_ob__c</columns>
    <columns>country_issue__c</columns>
    <columns>Age_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>dob__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>