force-app/main/default/objects/customer_POE__c/listViews/PIF_with_PIF_Final_false.listView-meta.xml
<ListView>
    <fullName>PIF_with_PIF_Final_false</fullName>
    <columns>NAME</columns>
    <columns>Deal_ID__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>passport_number__c</columns>
    <columns>passport_expiry_date__c</columns>
    <columns>pif_final__c</columns>
    <columns>name_change__c</columns>
    <columns>is_waiting_passport__c</columns>
    <columns>Passport_Update__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departure_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>pif_final__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>customer__c.Master</value>
    </filters>
    <filters>
        <field>Order_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>PIF with PIF Final false</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>